--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,12 @@ FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
+[compat]
+Colors = "^0.12"
+FileIO = "^1"
+StaticArrays = "^0.10, ^0.11, ^0.12, ^1"
+julia = "^1.5"
+
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
